--- a/RenaissaGhosh_Graphene_Synthesis_Machine_Learning_Project.ipynb
+++ b/RenaissaGhosh_Graphene_Synthesis_Machine_Learning_Project.ipynb
@@ -3830,7 +3830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 187,
    "id": "22e0822a-2659-42d2-9507-6d0e33320104",
    "metadata": {},
    "outputs": [
@@ -3897,6 +3897,7 @@
     "       'safety_risk_score', 'scalability_score', 'estimated_cost_usd']  \n",
     "       # affect the final quality classification of a synthesized graphene device and give a complete representation of both the process and the quality \n",
     "       # of the resulting material, making them the most important predictors of the graphene device's grade\n",
+    "x = no_outlier[features]\n",
     "y = no_outlier['device_grade']\n",
     "\n",
     "# 2. Train-test split\n",
