--- a/RenaissaGhosh_MachineLearning_Nanolasers_Project.ipynb
+++ b/RenaissaGhosh_MachineLearning_Nanolasers_Project.ipynb
@@ -5825,13 +5825,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 149,
    "id": "9685fac0-2a7a-4dd6-8b2c-ef3cdce6cb92",
    "metadata": {},
    "outputs": [],
    "source": [
     "# We should take the columns in which VIF scores are less than 10 (preferably less than 5).\n",
-    "# We are taking 3 independent columns: ''threshold_kW_per_cm2', 'room_temp_operation', and 'wavelength_nm' (based on correlation with the target column and VIF score)."
+    "# We are taking 3 independent columns: 'threshold_kW_per_cm2', 'room_temp_operation', and 'wavelength_nm' (based on correlation with the target column and VIF score)."
    ]
   },
   {
