--- a/RenaissaGhosh_Quantum_Devices_Machine_Learning_Project.ipynb
+++ b/RenaissaGhosh_Quantum_Devices_Machine_Learning_Project.ipynb
@@ -2905,7 +2905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 162,
    "id": "c4c32f7a-ec6e-4c7a-8ee8-d3c7839cd69c",
    "metadata": {},
    "outputs": [
@@ -2921,20 +2921,19 @@
        "       [0.08062081, 3.        , 1.        , 1.        ]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_new = no_outlier[['photon_energy_eV', 'material_system', 'is_infrared', 'photon_wavelength_nm']].to_numpy().reshape(-1,4)\n",
-    "# 2-D array with \n",
     "x_new"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 164,
    "id": "d23bdd26-6255-4711-842f-550e8cc9717a",
    "metadata": {},
    "outputs": [
@@ -3693,13 +3692,13 @@
        "       [0.10499832]])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_new = no_outlier[\"bandgap_eV\"].to_numpy().reshape(-1, 1)  # 2-D array with \n",
+    "y_new = no_outlier[\"bandgap_eV\"].to_numpy().reshape(-1, 1)\n",
     "y_new"
    ]
   },
